# rata-tea

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
docs/: note.md
examples/: 01-buttons.rs  02-text_fields.rs  03-forms.rs  05-http.rs  08-time-ex.rs  09-websocket.rs  download.rs  readme.rs  sub.rs  websocket.rs
examples/common/: mod.rs
src/: core.rs  lib.rs  ratatui.rs  runner.rs  runtime.rs  tea.rs
trash/: dyn_eq.rs  lib1.rs  lib2.rs  lib3.rs  lib4.rs  runner3.rs  runner4.rs
