[package]
name = "ratatui-tea-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

strum = { version = "0.28.0", features = ["derive"] }

futures = "0.3.32"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

tracing = "0.1.44"
color-eyre = "0.6.5"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dashmap = "6.1.0"

[dev-dependencies]
chrono = "0.4.44"
directories = "6.0.0"
lazy_static = "1.5.0"
ratatui-textarea = "0.9.1"
