[package]
name = "rata-tea"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Grant Zhang"]
license = "MIT OR Apache-2.0"
description = "The Elm Architecture (TEA) for ratatui"
readme = "README.md"
homepage = "https://github.com/gntzh/rata-tea"
repository = "https://github.com/gntzh/rata-tea"
keywords = ["tui", "ratatui", "elm", "ui"]
categories = ["command-line-interface"]

[lints.clippy]
unwrap_used = "warn"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

strum = { version = "0.28.0", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

tracing = "0.1.44"
color-eyre = "0.6.5"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dashmap = "6.1.0"

[dev-dependencies]
chrono = "0.4.44"
lazy_static = "1.5.0"
ratatui-textarea = "0.9.1"
reqwest = "0.13.3"
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-native-roots",
] }
