[package]
name = "rata-tea"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Grant Zhang"]
license = "MIT OR Apache-2.0"
description = "The Elm Architecture (TEA) for ratatui"
readme = "README.md"
homepage = "https://github.com/gntzh/rata-tea"
repository = "https://github.com/gntzh/rata-tea"
keywords = ["tui", "ratatui", "elm", "ui"]
categories = ["command-line-interface"]

[lints.clippy]
unwrap_used = "warn"

[features]
default = []
runtime = ["dep:dashmap", "dep:tokio", "dep:tracing"]
ratatui-crossterm = [
    "runtime",
    "dep:color-eyre",
    "dep:crossterm",
    "dep:ratatui",
    "ratatui/crossterm",
]

[dependencies]
futures = "0.3.32"

color-eyre = { version = "0.6.5", optional = true }
crossterm = { version = "0.29.0", default-features = false, features = [
    "event-stream",
], optional = true }
dashmap = { version = "6.1.0", optional = true }
ratatui = { version = "0.30.0", default-features = false, optional = true }
tokio = { version = "1.52.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
], optional = true }
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
chrono = "0.4.44"
crossterm = { version = "0.29.0", features = ["event-stream"] }
color-eyre = "0.6.5"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
reqwest = "0.13.3"
tokio = { version = "1.52.1", features = ["sync"] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-native-roots",
] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[[example]]
name = "01-buttons"
required-features = ["ratatui-crossterm"]

[[example]]
name = "02-text_fields"
required-features = ["ratatui-crossterm"]

[[example]]
name = "03-forms"
required-features = ["ratatui-crossterm"]

[[example]]
name = "05-http"
required-features = ["ratatui-crossterm"]

[[example]]
name = "08-time-ex"
required-features = ["ratatui-crossterm"]

[[example]]
name = "09-websocket"
required-features = ["ratatui-crossterm"]

[[example]]
name = "download"
required-features = ["ratatui-crossterm"]

[[example]]
name = "readme"
required-features = ["ratatui-crossterm"]

[[example]]
name = "sub"
required-features = ["ratatui-crossterm"]
